--- a/public/login.html
+++ b/public/login.html
@@ -5,18 +5,18 @@
     <title>Registration Form Template | PrepBootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css" />
 
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <div class="container">
 
 <div class="page-header">
-    <h1>Sistema Revendedora <small>Cadastro</small></h1>
+    <h1>Sistema Revendedora <small>Login</small></h1>
 </div>
 
 <!-- Registration Form - START -->
@@ -25,36 +25,17 @@
             <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title text-center">Cadastro</h3>
+                        <h3 class="panel-title text-center">Login</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
                             <div class="form-group">
-                                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="Nome">
-                            </div>
-
-                            <div class="form-group">
-                                <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Sobrenome">
-                            </div>
-
-                            <div class="form-group">
                                 <input type="email" name="email" id="email" class="form-control input-sm" placeholder="E-mail">
                             </div>
-
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Senha">
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirmar Senha">
-                                    </div>
-                                </div>
+                            <div class="form-group">
+                                <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Senha">
                             </div>
-
-                            <input type="submit" value="Cadastrar" class="btn btn-info btn-block">
+                            <input type="submit" value="Login" class="btn btn-info btn-block">
                         </form>
                     </div>
                 </div>
