Corrigida rota de PedidoVendaItem

--- a/app/documentation.html
+++ b/app/documentation.html
@@ -15,11 +15,12 @@
 <h4>Pedido Venda Item</h4>
 <h4>Produtos</h4>
 
-/api/produtos/init
+<b>/api/produtos/init</b>
 
-/api/produtos
+<b>/api/produtos</b>
 
-GET
+<li>GET</li>
+
 Requisição
 Nenhuma
 Retorno
