--- a/public/novo_pedido.html
+++ b/public/novo_pedido.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html  ng-app="moduloPrincipal">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,8 +144,8 @@
 		</div><!--/header-bottom-->
 	</header><!--/header-->
 	
-	<section id="cart_items" ng-controller="clienteController">
-		<div class="container">
+	<section id="cart_items">
+		<div class="container" ng-controller="clienteController">
 			<div class="breadcrumbs">
 				<ol class="breadcrumb">
 				  <li><a href="#">Home</a></li>
@@ -155,8 +155,7 @@
 			</div><!--/breadcrums-->
 
 			<select>
-				<option>Cliente Teste</option>
-				<option>Cliente Teste 2</option>
+				<option ng-repeat="cliente in clientes">{{cliente.nome}}</option>
 			</select>
 
 			<div class="step-one">
@@ -514,9 +513,9 @@
     <script src="js/main.js"></script>
 
     <script src="js/angular.min.js"></script><!-- load angular -->
-    <script src="js/controllers/main_revend.js"></script><!-- load up our controller -->
     <script src="js/services/produtos.js"></script><!-- load our produtos service -->
     <script src="js/services/clientes.js"></script><!-- load our clientes service -->
-    <!--<script src="js/core_revend.js">--></script><!-- load our main application -->
+    <script src="js/services/revendedoras.js"></script><!-- load our revendedora service -->
+    <script src="js/controllers/main_revend.js"></script><!-- load up our controller -->
 </body>
 </html>
