--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,8 @@
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
 								<!--<li><a href=""><i class="fa fa-user"></i>Conta</a></li>-->
-								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i>Pedido</a></li>
+								<li><a href="novo_pedido.html"><i class="fa fa-crosshairs"></i>Novo Pedido</a></li>
+								<li><a href="clientes.html"><i class="fa fa-user"></i>Clientes</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i>Carrinho</a></li>
 								<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
